fixed footer elements and aligned

--- a/src/index.css
+++ b/src/index.css
@@ -20,8 +20,8 @@
 
 #footer {
   display: flex;
-  flex-direction: column;
-  text-align: center;
+  flex-direction: row;
+  justify-content: center;
 }
 
 a {
